--- a/orcidReport.ini
+++ b/orcidReport.ini
@@ -5,7 +5,7 @@
 baseURI = "https://pub.orcid.org/v1.2/"
 ; Institution Name - the name of the institution to query for (as it appears in ORCID profiles, e.g. "Georgetown University")
 instName = "<CHANGE ME>"
-; Ringgold Identifier - unique institution identifier to search for (should be a 4-digit number)
+; Ringgold Identifier - unique institution identifier to search for (should be a 4-6 digit number)
 ringgoldID = "<CHANGE ME>"
 ; Batch Size - number of results to query for at a time in initial affiliation search. Current maximum is 100
 batchSize = 100
